MTP-2444 fix width and icon alignment, update story  (#1122)
* MTP-2444 fix width and icon alignment, update mixin to not let icon shrink, update story

* move flex shrink rules to class, forward-arrow + disclosure-header

* MTP-2444 remove margin in mixin, use gap to space el

* MTP-2444 fix for grid-area order in styles

--- a/mt-kit/core/css/src/components/_disclosure.scss
+++ b/mt-kit/core/css/src/components/_disclosure.scss
@@ -16,14 +16,14 @@
 
   .disclosure-header {
     @include apply-icon($icon: $icon-carret-down-primary, $position: before) {
-      margin-left: var(--disclosure-spacing);
+      flex-shrink: 0;
     }
     display: flex;
     align-items: center;
     gap: var(--spacer-xxx-small);
     width: 100%;
     margin: 0;
-    padding: var(--disclosure-spacing) 0;
+    padding: var(--disclosure-spacing) 0 var(--disclosure-spacing) var(--disclosure-spacing);
     overflow-wrap: anywhere;
   }
   [aria-expanded='true'].disclosure-header {
@@ -65,13 +65,13 @@
         grid-area: pseudo;
       }
       > .chapter-number {
-        grid-column: 1 / span 1;
         grid-area: number;
+        grid-column: 1 / span 1;
         place-self: center;
       }
       > .title {
-        grid-column: 2 / span 11;
         grid-area: title;
+        grid-column: 2 / span 11;
       }
       @media screen and (min-width: $breakpoint-large) {
         > .chapter-number {
