--- a/mt-kit/core/css/src/utilities/_mixins.scss
+++ b/mt-kit/core/css/src/utilities/_mixins.scss
@@ -198,16 +198,9 @@
   }
 }
 
-@mixin apply-icon(
-  $icon,
-  $position: 'before',
-  $direction: 'down',
-  $spacer: var(--spacer-xx-small),
-  $open-state-icon: null
-) {
+@mixin apply-icon($icon, $position: 'before', $direction: 'down', $open-state-icon: null) {
   $valid-directions: down, up, right, left;
   $pseudo: before, after;
-  $margin-side: if($position == 'before', 'right', 'left');
 
   @if not index($valid-directions, $direction) {
     @error "Unknown direction value '#{$direction}' at $dir. $dir can only be of value 'down' | 'up' | 'right' | 'left'.";
@@ -234,7 +227,6 @@
     background: no-repeat center $icon;
     width: $icon-size-x-large;
     height: $icon-size-x-large;
-    margin-#{$margin-side}: $spacer;
     transform: rotate(#{$dir-mapped-to-rotate}deg);
     @media (prefers-reduced-motion: no-preference) {
       transition: transform $transition-ms-300 ease;
